--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -27,7 +27,7 @@
 }
 
 #mainNav .navbar-nav .nav-item:hover {
-  color: fade(white, 10%);
+  color: face(white, 80%);
   outline: none;
   background-color: transparent;
 }
